[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"

[project]
name = "ftui"
dynamic = ["version"]

authors = [
  {name = "froggleston"},
  {name = "Freqtrade Team", email = "freqtrade@protonmail.com"},
]

description = "Freqtrade TUI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    'pandas',
    'numpy',
    'requests',
    'python-rapidjson',
    'PyYaml',
    'textual==0.85.0',
    'plotext==5.2.8',
    'textual_plotext==0.2.1',
    'freqtrade-client',
]

[project.urls]
Homepage = "https://github.com/freqtrade/ftui"
Documentation = "https://freqtrade.io"
"Bug Tracker" = "https://github.com/freqtrade/ftui/issues"

[project.scripts]
ftui = "ftui.ftui:main"

[tool.hatch.build.targets.sdist]
# where = ["."]
include = ["ftui*"]
exclude = ["tests", "tests.*"]

[tool.hatch.version]
path = "ftui/__init__.py"

[tool.black]
line-length = 100
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  # Exclude vendor directory
  | vendor
)
'''

[tool.isort]
line_length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
  "TID",    # flake8-tidy-imports
  # "EXE",  # flake8-executable
  "YTT",    # flake8-2020
  # "DTZ",  # flake8-datetimez
  # "RSE",  # flake8-raise
  # "TCH",  # flake8-type-checking
  # "PTH",  # flake8-use-pathlib
  "I",      # isort
]

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"
